fixed consistency issues